force-app/main/default/objects/CC_Application_Specification__c/fields/CC_Specification_Type__c.field-meta.xml
<CustomField>
    <fullName>CC_Specification_Type__c</fullName>
    <label>Specification Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>License</fullName>
            </value>
            <value>
                <fullName>Charges</fullName>
            </value>
            <value>
                <fullName>Rooms</fullName>
            </value>
            <value>
                <fullName>Schedule</fullName>
            </value>
            <value>
                <fullName>Additional Information</fullName>
            </value>
            <value>
                <fullName>Provider Below Market Rates</fullName>
            </value>
            <value>
                <fullName>Parent Application</fullName>
            </value>
            <value>
                <fullName>Provider Staff</fullName>
            </value>
            <value>
                <fullName>Contact Alias</fullName>
            </value>
            <value>
                <fullName>Address</fullName>
            </value>
            <value>
                <fullName>Floor Plan</fullName>
            </value>
            <value>
                <fullName>Professional Credential</fullName>
            </value>
            <value>
                <fullName>Employment</fullName>
            </value>
            <value>
                <fullName>Degree</fullName>
            </value>
            <value>
                <fullName>Overlap Care</fullName>
            </value>
            <value>
                <fullName>State Lived In</fullName>
            </value>
            <value>
                <fullName>Conviction and Disposition</fullName>
            </value>
            <value>
                <fullName>Jurisdiction</fullName>
            </value>
            <value>
                <fullName>Co-owner</fullName>
                <isActive>false</isActive>
                <label>Co-owner</label>
            </value>
            <value>
                <fullName>Director</fullName>
                <isActive>false</isActive>
                <label>Director</label>
            </value>
            <value>
                <fullName>Owner</fullName>
                <isActive>false</isActive>
                <label>Owner</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>