force-app/main/default/objects/CC_Application_Specification__c/fields/CC_SqaureFeet__c.field-meta.xml
<CustomField>
    <fullName>CC_SqaureFeet__c</fullName>
    <formula>CC_Width_of_Room__c *  CC_Length_of_Room__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Square Feet of Room</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>