force-app/main/default/objects/CC_Application_Specification__c/fields/CC_Square_Feet_of_Room__c.field-meta.xml
<CustomField>
    <fullName>CC_Square_Feet_of_Room__c</fullName>
    <label>Square Feet of Room</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>