force-app/main/default/objects/CC_Application_Specification__c/fields/CC_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>