force-app/main/default/objects/CC_Application_Specification__c/fields/CC_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>CC_Start_Time__c</fullName>
    <label>Start Time</label>
    <type>Time</type>
</CustomField>