force-app/main/default/objects/CC_Application_Specification__c/fields/CC_State_Resided__c.field-meta.xml
<CustomField>
    <fullName>CC_State_Resided__c</fullName>
    <label>State Resided</label>
    <length>255</length>
    <type>Text</type>
</CustomField>