force-app/main/default/objects/CC_Application_Specification__c/fields/CC_State_Resided_To__c.field-meta.xml
<CustomField>
    <fullName>CC_State_Resided_To__c</fullName>
    <label>State Resided To</label>
    <type>Date</type>
</CustomField>