force-app/main/default/objects/CC_Application_Specification__c/fields/CC_Suffix__c.field-meta.xml
<CustomField>
    <fullName>CC_Suffix__c</fullName>
    <label>Suffix</label>
    <length>15</length>
    <type>Text</type>
</CustomField>