force-app/main/default/objects/CC_Application_Specification__c/fields/CC_To_Monday__c.field-meta.xml
<CustomField>
    <fullName>CC_To_Monday__c</fullName>
    <label>To(Monday)</label>
    <type>Time</type>
</CustomField>