force-app/main/default/objects/CC_Application_Specification__c/fields/CC_To_Wednesday__c.field-meta.xml
<CustomField>
    <fullName>CC_To_Wednesday__c</fullName>
    <label>To(Wednesday)</label>
    <type>Time</type>
</CustomField>