force-app/main/default/objects/CC_Application_Specification__c/fields/CC_Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>CC_Total_Hours__c</fullName>
    <formula>(FLOOR((CC_End_Time__c - CC_Start_Time__c )/3600000)) +
(((
((CC_End_Time__c - CC_Start_Time__c )/3600000) -
(FLOOR((CC_End_Time__c - CC_Start_Time__c )/3600000))
)
*60) / 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>