force-app/main/default/objects/CC_Application_Specification__c/fields/CC_Type_of_Care__c.field-meta.xml
<CustomField>
    <fullName>CC_Type_of_Care__c</fullName>
    <label>Type of Care</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Infant (6 wks. – 18 mos.)</fullName>
            </value>
            <value>
                <fullName>Toddler (18 mos. – 35 mos.)</fullName>
            </value>
            <value>
                <fullName>Preschool (3 – 5 yrs.; not in K)</fullName>
            </value>
            <value>
                <fullName>School Age (5 yrs. in K – 16 yrs.)</fullName>
            </value>
            <value>
                <fullName>ADOLESCENT (Middle school)</fullName>
                <isActive>false</isActive>
                <label>ADOLESCENT (Middle school)</label>
            </value>
            <value>
                <fullName>APPROVED EDUCATIONAL PROGRAM</fullName>
                <isActive>false</isActive>
                <label>APPROVED EDUCATIONAL PROGRAM</label>
            </value>
            <value>
                <fullName>DROP-IN (Exclusively)</fullName>
                <isActive>false</isActive>
                <label>DROP-IN (Exclusively)</label>
            </value>
            <value>
                <fullName>EDUCATIONAL PROGRAM (Religious Exempt)</fullName>
                <isActive>false</isActive>
                <label>EDUCATIONAL PROGRAM (Religious Exempt)</label>
            </value>
            <value>
                <fullName>INFANT (6 weeks through 17 months)</fullName>
                <isActive>false</isActive>
                <label>INFANT (6 weeks through 17 months)</label>
            </value>
            <value>
                <fullName>PRESCHOOL (2 through 5 years old)</fullName>
                <isActive>false</isActive>
                <label>PRESCHOOL (2 through 5 years old)</label>
            </value>
            <value>
                <fullName>SCHOOL AGE (Grades K- 8)</fullName>
                <isActive>false</isActive>
                <label>SCHOOL AGE (Grades K- 8)</label>
            </value>
            <value>
                <fullName>SPECIAL CARE FACILITY (Acutely Ill Children)</fullName>
                <isActive>false</isActive>
                <label>SPECIAL CARE FACILITY (Acutely Ill Children)</label>
            </value>
            <value>
                <fullName>TODDLER (18 months through 23 months)</fullName>
                <isActive>false</isActive>
                <label>TODDLER (18 months through 23 months)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>