force-app/main/default/objects/CC_Application_Specification__c/fields/CC_Type_of_Charges__c.field-meta.xml
<CustomField>
    <fullName>CC_Type_of_Charges__c</fullName>
    <label>Type of Charges</label>
    <length>255</length>
    <type>Text</type>
</CustomField>