force-app/main/default/objects/CC_Application_Specification__c/fields/CC_Width_of_Room__c.field-meta.xml
<CustomField>
    <fullName>CC_Width_of_Room__c</fullName>
    <label>Width of Room (ft)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>