force-app/main/default/objects/CC_Application_Specification__c/fields/Person_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Person_Account_Id__c</fullName>
    <formula>CC_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Person Account Id</label>
    <type>Text</type>
</CustomField>