force-app/main/default/objects/CC_Application_Specification__c/fields/Specification_Name__c.field-meta.xml
<CustomField>
    <fullName>Specification_Name__c</fullName>
    <label>Specification Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>