force-app/main/default/objects/CC_Application_Specification__c/fields/Traditional_Hours_Test__c.field-meta.xml
<CustomField>
    <fullName>Traditional_Hours_Test__c</fullName>
    <formula>ABS(
  MIN(
    VALUE(MID(TEXT(CC_To_Monday__c), 1, 2)) + VALUE(MID(TEXT(CC_To_Monday__c), 4, 2)) / 60,
    VALUE(MID(TEXT(CC_To_Tuesday__c), 1, 2)) + VALUE(MID(TEXT(CC_To_Tuesday__c), 4, 2)) / 60
  ) -
  MAX(
    VALUE(MID(TEXT(CC_From_Monday__c), 1, 2)) + VALUE(MID(TEXT(CC_From_Monday__c), 4, 2)) / 60,
    VALUE(MID(TEXT(CC_From_Tuesday__c), 1, 2)) + VALUE(MID(TEXT(CC_From_Tuesday__c), 4, 2)) / 60
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Traditional Hours Test</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>